--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <title>Sarafan</title>
 
-    <!-- версия для разработки, отображает полезные предупреждения в консоли -->
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
     <script th:inline="javascript">
         const frontendData = [[${frontendData}]]
     </script>
@@ -17,7 +14,7 @@
 
 <div id="app"></div>
 
-<script src="/js/main.js"></script>
+<script th:src="${isDevMode} ? 'http://localhost:8000/main.js' : '/js/main.js'"></script>
 
 </body>
 </html>
