#14 Комментарии с JPA Entity Graph. Spring Boot Rest (https://www.youtube.com/watch?v=b2a4rVR5hiQ&list=PLU2ftbIeotGqSTOVNjT4L3Yfy8jatCdhm&index=14)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
 
     <script th:inline="javascript">
         const frontendData = [[${frontendData}]]
+        const messages = [# th:utext="${messages}" /]
     </script>
 </head>
 <body>
