#17.Подписки пользователей. Spring Boot Rest (https://www.youtube.com/watch?v=P9oy1F1mi_k&list=PLU2ftbIeotGqSTOVNjT4L3Yfy8jatCdhm&index=17)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
     <script th:inline="javascript">
         const frontendData = [[${frontendData}]]
         const messages = [# th:utext="${messages}" /]
+        const profile = [# th:utext="${profile}" /]
     </script>
 </head>
 <body>
